<resources>
    <string name="app_name">InilahKoran</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tmp_title">Ini titlenya panjang banget loh pisan sekali</string>
    <string name="tmp_teaser">Ini lebih panjang lagi harusnya karena ini sebuah teaser yang bakal panjang isinya</string>
    <string name="tmp_category">Category</string>
    <string name="tmp_date">4 Juni 2016</string>
    <string name="font_family">san-serif-medium</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
