<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title_list"
                android:text="@string/tmp_title"
                android:textStyle="bold"
                android:fontFamily="@string/font_family" />
            <TextView
                android:id="@+id/txt_item_cat"
                android:text="@string/tmp_category"
                android:textSize="@dimen/text_cat_date_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/fab_margin"
            >
            <ImageView
                android:id="@+id/img_item_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        />

</LinearLayout>